show student score and name